syntax = "proto3";

message HomeInfo{
  reserved 2 to 10;
  string id = 1;
  int32 totalUser = 21;
  int32 onlineUser = 22;
  int32 todayUser = 23;
  CpuInfo cpu = 24;
  MemeryInfo memery = 25;
  repeated DiskInfo disk = 26;

  message CpuInfo {
    reserved 2 to 10;
    string system = 11;
    string process = 12;
    string loadAverage = 13;
  }

  message MemeryInfo {
    reserved 2 to 10;
    string used = 11;
    string total = 12;
  }

  message DiskInfo {
    reserved 2 to 10;
    string used = 11;
    string total = 12;
    string name = 13;
  }
}

message NotificationMessage{
  reserved 2 to 10;
  string id = 1;
  string title = 20;
  string message = 21;
}
